--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@pixi/react": "^8.0.0-beta.25",
     "pixi.js": "^8.9.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
